<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Fragment2">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coinName">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_const_price"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/detailed_const_min"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/detailed_const_max"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/detailed_const_date"
                    android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/coinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currencyimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/coinName">

                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_price"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMin"
                    app:layout_constraintEnd_toEndOf="@+id/textViewMax"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textViewMin"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewMin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/detailed_min"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMax"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPrice" />

                <TextView
                    android:id="@+id/textViewMax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed_max"
                    app:layout_constraintBottom_toTopOf="@+id/textViewUpdated"
                    app:layout_constraintEnd_toEndOf="@+id/textViewUpdated"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textViewMin"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMin" />

                <TextView
                    android:id="@+id/textViewUpdated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:text="@string/detailed_updated"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewMin"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMax" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>